# karmac

./: CMakeLists.txt
cmake/modules/: FindFluidSynth.cmake
include/KarMac/: exception.h  shared_ptr.h
include/KarMac/Lib/KMPackage/: FileDef.h  Package.h  PackageEditor.h
src/: CMakeLists.txt
src/libkmpackage/: CMakeLists.txt  Package.cpp  PackageEditor.cpp
tests/: CMakeLists.txt
tests/Lib/: CMakeLists.txt
tests/Lib/KMPackage/: CMakeLists.txt  main.cpp
